# storage/api-docs/api-docs.json
@@ -158,6 +158,58 @@
                     }
                 }
             }
+        },
+        "/api/cities": {
+            "get": {
+                "tags": [
+                    "city"
+                ],
+                "summary": "Get all cities",
+                "description": "Get list of all cities",
+                "operationId": "getCities",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Access token",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
+        },
+        "/api/cities/{id}": {
+            "get": {
+                "tags": [
+                    "city"
+                ],
+                "summary": "Get city by id",
+                "description": "Get one city by id",
+                "operationId": "getCity",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "Access token",
+                        "required": false
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "City id",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                }
+            }
         }
     },
     "tags": [
